--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "php": ">=5.4",
         "behat/behat": "~3.0,>=3.0.5",
         "timitao/behatterminalextension": "1.0.*",
-        "phpseclib/phpseclib": "dev-php5 as 0.3.9"
+        "phpseclib/phpseclib": "0.3.9"
     },
     "autoload": {
         "psr-4": {
